# whitebox

./: MATRIX_FREE_SVD.md  README-new.md  README.md  graph_after.txt  graph_before.txt  pyproject.toml
benchmarks/: bench.py
benchmarks/results/: QWEN_2_7B_INSTRUCT_COST.md
benchmarks/results/20260306_174220/svd_interval16/: benchmarks.csv  config.json  gpu_memory.csv
benchmarks/results/20260306_174220/svd_interval256/: benchmarks.csv  config.json  gpu_memory.csv
benchmarks/results/20260306_174220/svd_interval64/: benchmarks.csv  config.json  gpu_memory.csv
benchmarks/results/20260306_174220/svd_lanczos_interval64/: config.json  gpu_memory.csv
benchmarks/results/20260306_174220/svd_rank8_interval64/: benchmarks.csv  config.json  gpu_memory.csv
benchmarks/results/20260306_174220/vanilla/: benchmarks.csv  config.json  gpu_memory.csv
benchmarks/results/20260306_174220/vanilla_eager/: benchmarks.csv  config.json  gpu_memory.csv
experiments/: analyze.py  extract.py  spectral.py
glassbox/: __init__.py  config.py  custom_ops.py  hodge.py  main.py  results.py  svd.py  svd_backend_runner.py  vllm_plugin.py
glassbox/backends/: runner.py  svd_backend.py
glassbox/passes/: custom_ops.py  injector.py
tests/: test_hodge.py  test_results.py  test_svd.py
whitebox/: config.py  main.py
whitebox/passes/: mean.py
