[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "glassbox"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "pydantic-settings[yaml]",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["glassbox*"]

[project.entry-points."vllm.general_plugins"]
glassbox_svd = "glassbox.vllm_plugin:register_svd_backend"
